# codex-extended

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  commitmsg2.txt  package.json  requirements.txt
.github/codex/home/: config.toml
.github/workflows/: ci.yml  rust-ci.yml
cli/: package.json
cli/src/: index.js
cli/test/: cli.test.js
clients/dart/: README.md  pubspec.yaml
clients/dart/lib/: codex_client.dart
clients/dart/test/: codex_client_test.dart
clients/go/: README.md  client.go  client_test.go  go.mod
codex-cli/scripts/: README.md  install_native_deps.sh  stage_release.sh
codex-cli/test/: cli-symlink.test.js  getUpdatedPath.test.js
codex-rs/: Cargo.toml  README.md  justfile
codex-rs/ai/: Cargo.toml
codex-rs/ai/src/: lib.rs
codex-rs/bridge/: Cargo.toml
codex-rs/bridge/src/: client.rs  lib.rs  server.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  main.rs
codex-rs/client/: Cargo.toml
codex-rs/client/src/: main.rs
codex-rs/common/src/: backend_cli_arg.rs  edit_mode_cli_arg.rs  lib.rs  sandbox_summary.rs
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/src/: apply_patch.rs  autogen.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_conversation.rs  complex_math.rs  config.rs  config_types.rs  conversation_manager.rs  error.rs  exec.rs  lib.rs  local_voice.rs  math_tools.rs  model_adapter.rs  model_family.rs  model_provider_info.rs  mul.rs  openai_model_info.rs  openai_tools.rs  plan_tool.rs  plugins.rs  safety.rs  seatbelt.rs  tool_bridge.rs  voice.rs  web.rs
codex-rs/core/templates/: ollama_bridge.md
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  mul_e2e.rs  ollama_bridge.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs  main.rs  output_schema.rs
codex-rs/execpolicy/src/: lib.rs  opt.rs  policy_parser.rs
codex-rs/execpolicy/tests/: opt.rs
codex-rs/gui/: Cargo.toml
codex-rs/gui/src/: lib.rs  main.rs
codex-rs/linux-sandbox/src/: landlock.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/lmstudio/src/: lib.rs
codex-rs/login/: Cargo.toml
codex-rs/mcp-client/src/: mcp_client.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  internal_tools.rs  lib.rs  message_processor.rs  outgoing_message.rs
codex-rs/mul/: Cargo.toml
codex-rs/mul/src/: adapter.rs  error.rs  lib.rs  parser.rs  serializer.rs  tooling.rs
codex-rs/mul/tests/: ada_roundtrip.rs  ada_tooling.rs  bash_roundtrip.rs  bash_tooling.rs  c_roundtrip.rs  c_tooling.rs  clojure_roundtrip.rs  clojure_tooling.rs  cpp_roundtrip.rs  cpp_tooling.rs  csharp_roundtrip.rs  csharp_tooling.rs  dart_roundtrip.rs  dart_tooling.rs  elixir_roundtrip.rs  elixir_tooling.rs  erlang_roundtrip.rs  erlang_tooling.rs  fortran_roundtrip.rs  fortran_tooling.rs  fsharp_roundtrip.rs  fsharp_tooling.rs  go_roundtrip.rs  go_tooling.rs  groovy_roundtrip.rs  groovy_tooling.rs  haskell_roundtrip.rs  haskell_tooling.rs  java_roundtrip.rs  java_tooling.rs  javascript_roundtrip.rs  javascript_tooling.rs  julia_roundtrip.rs  julia_tooling.rs  kotlin_roundtrip.rs  kotlin_tooling.rs  lua_roundtrip.rs  lua_tooling.rs  matlab_roundtrip.rs  matlab_tooling.rs  (+26 more)
codex-rs/ollama/: Cargo.toml
codex-rs/ollama-tools/: Cargo.toml
codex-rs/ollama-tools/src/: modelfile.rs
codex-rs/ollama/schema/: tool_output.json
codex-rs/ollama/src/: backend.rs  bridge.rs  client.rs  json_repair.rs  lib.rs  tool_bridge.rs
codex-rs/ollama/tests/: tool_bridge.rs  wiremock_integration.rs
codex-rs/protocol/src/: mcp_protocol.rs  plan_tool.rs  protocol.rs
codex-rs/server/: Cargo.toml
codex-rs/server/src/: main.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  history_cell.rs  insert_history.rs  lib.rs  main.rs
codex-rs/tui/tests/: agent.rs  insert_history.rs
codex-rs/web-server/: Cargo.toml
codex-rs/web-server/src/: lib.rs
crates/codex-core/: Cargo.toml
crates/codex-core/src/: config.rs  lib.rs
crates/codex-ollama/: Cargo.toml
crates/codex-ollama/src/: lib.rs
crates/codex-redis/: Cargo.toml
crates/codex-redis-vector/: Cargo.toml
crates/codex-redis-vector/src/: index.rs
crates/codex-redis-vector/tests/: determinism.rs  perf.rs
crates/codex-redis/src/: lib.rs  resp.rs
crates/codex-redis/tests/: ttl.rs
crates/codex-server/: Cargo.toml
crates/codex-server/src/: lib.rs  main.rs
crates/codex-server/tests/: server.rs
docs/: CONFIG_REFERENCE.md  advanced.md  config.md  contributing.md  getting-started.md  model-adapters.md  mul-spec.md  mul.md  plugins.md  sandbox.md  server.md  web-ui.md
examples/: config-capabilities.toml  config.toml  embed.json  ingest.json  pipeline.json
examples/mul/: README.md  program.mul
examples/mul/javascript/: README.md
examples/mul/python/: README.md
modelfiles/: README.md
modelfiles/cogito3bcodex/: Modelfile
modelfiles/qwen2.5coder7bcodex/: Modelfile
omni-bridge/: Cargo.toml
omni-bridge/src/: caps.rs  error.rs  ir.rs  lib.rs  stream.rs
omni-bridge/src/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs
omni-bridge/tests/: bridge.rs
plugins/complex_math/: plugin.toml  requirements.txt  run.py  server.py
scripts/: install_deps.sh  local_ci.sh  setup_venv.py  test_levels.py
web-ui/: .flutter-plugins-dependencies  README.md  pubspec.yaml
web-ui/.dart_tool/: package_config.json  package_graph.json
web-ui/lib/: main.dart
web-ui/test/: widget_test.dart
web-ui/web/: index.html  manifest.json
(+93 files in other folders)
