[package]
name = "codex-ai"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_ai"
path = "src/lib.rs"

doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-openai = "0.29"
futures = "0.3"
genai = "0.3"
groqai = "0.1"
tokio = { version = "1", features = ["full"] }
