[package]
name = "codex-client"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "codex-client"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-core = { path = "../core" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
