[package]
name = "codex-gui"
edition = "2024"
version = { workspace = true }

[[bin]]
name = "codex-gui"
path = "src/main.rs"

[lib]
name = "codex_gui"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-arg0 = { path = "../arg0" }
codex-tui = { path = "../tui" }
eframe = "0.27"

[dev-dependencies]
pretty_assertions = "1"
