[package]
name = "codex-lmstudio"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
