[package]
edition = "2024"
name = "codex-ollama"
version = { workspace = true }

[lib]
name = "codex_ollama"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream = "0.3"
bytes = "1.10.1"
codex-core = { path = "../core" }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
jsonschema = "0.17"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
ollama-rs = { version = "0.3", features = ["stream"] }
url = "2"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { version = "0.1.41", features = ["log"] }
wiremock = "0.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
