[package]
name = "codex-web-server"
edition = "2024"
version = { workspace = true }

[lib]
name = "codex_web_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
codex-common = { path = "../common", features = ["cli"] }
codex-core = { path = "../core" }
codex-login = { path = "../login" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3"

