[package]
name = "codex-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
codex-core = { path = "../codex-core" }
codex-ollama = { path = "../codex-ollama" }
codex-redis = { path = "../codex-redis" }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features=["json"] }
httpmock = "0.7"
serde_json = "1"
tempfile = "3"
